--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "debounce": "^1.2.1",
+    "lodash": "^4.17.21",
+    "pnotify": "^5.2.0"
   }
 }
